added features card and images work in progress

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -61,7 +61,7 @@
     text-decoration: none;
   }
 
-  .main navbar, .banner{
+  .main .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
   }
@@ -112,6 +112,33 @@
   #quick-list{
     font-weight: 500;
   }
+
+/* features section related styles */
+
+.features{
+  gap: 140px;
+}
+ 
+    #feature-section-title{
+      border-left: 5px solid #FF900E;
+      padding: 20px;
+    }
+
+    .feature-card{
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+      margin-bottom: 20px;
+    }
+  
+    .feature-card .feature-title{
+      font-weight: 600;
+      font-size: 1.25rem;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      
+    
+    }
   /* some facts related styles */
   .facts-container{
     display: grid;
@@ -145,6 +172,24 @@
     max-width: 540px;
   }
 
+  
+  /* sponsor related styles */
+  .sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+  }
+
+  .sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .sponsor-companies img{
+    filter: grayscale(100%);
+  }
+
+
   /* responsive media  queary */
   @media screen and (max-width: 576px) {
     .navbar, 
@@ -153,8 +198,21 @@
       flex-direction: column;
     }
 
-    .team-img-container{
+    .team-img-containe, 
+    .facts-container,
+    .sponsor-companies
+    {
       grid-template-columns: repeat(1, 1fr);
+    }
+
+    .facts-container{
+      justify-items: center;
+      gap: 24px;
+    }
+
+    .sponsor-companies{
+      justify-items: center;
+      gap: 50px;
     }
 
     .our-features{
@@ -170,9 +228,19 @@
     .our-features{
       margin-left: 50px auto;
     }
+
+    .sponsor-companies, .facts-container{
+      grid-template-columns: repeat(2,1fr);
+      gap: 50px;
+      justify-items: center;
+    }
     
   }
   .text-primary{
      color: #FF900E;
   }
    
+  .main-container{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
