--- a/styles/architects.css
+++ b/styles/architects.css
@@ -139,6 +139,21 @@
       
     
     }
+    #experience-badge{
+      padding: 45px 42px;
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.featured-architect img{
+  width: 100%;
+}
+
   /* some facts related styles */
   .facts-container{
     display: grid;
@@ -194,6 +209,7 @@
   @media screen and (max-width: 576px) {
     .navbar, 
     .nav-links,
+    .features,
     .teams{
       flex-direction: column;
     }
@@ -218,11 +234,19 @@
     .our-features{
       margin-left: 20px;
     }
+
+     #experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+
   }
+      
+  }
+
 
   /* media size device */
   @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
       flex-direction: column;
     }
     .our-features{
@@ -234,6 +258,12 @@
       gap: 50px;
       justify-items: center;
     }
+
+     #experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+
+  }
     
   }
   .text-primary{
